[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rlm"
version = "0.1.0"
description = "Reinforcement Learning for Language Models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "alexzhang13", email = "" }
]
keywords = ["reinforcement-learning", "language-models", "rlhf", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/alexzhang13/rlm"
Repository = "https://github.com/alexzhang13/rlm"
Documentation = "https://rlm.readthedocs.io"
Bug Tracker = "https://github.com/alexzhang13/rlm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88  # changed from 100 to match black's default for consistency
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88  # keep in sync with black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# removed --cov flags so I can run tests quickly without coverage overhead;
# use `pytest --cov=src/rlm --cov-report=term-missing` explicitly when needed
addopts = "-v"
# personal: also run with -x (fail fast) so I don't have to wait through all
# failures when iterating locally -- comment this out for CI runs
# addopts = "-v -x"

[tool.coverage.run]
source = ["src/rlm"]
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
# personal preference: skip files with 100% coverage to keep output concise
skip_covered = true
show_missing = true
